# langgraph-template

./: .env.example  .gitignore  LICENSE  README.md  langgraph.json  pyproject.toml
config/: mcp.yaml
scripts/: langgraph.ps1
src/example/: cli.py  context.py  graph.py  state.py
src/example/mcp/: math.py
src/example/server/: app.py  router.py
tests/mcp/: test_math.py
